# financial_model_report_automation

./: .gitignore  Financial_Report_Example.ipynb  README.md  load_venv.sh  make_pdf.sh  pyproject.toml  references.bib  setup_venv.sh  sync_venv.sh
.github/workflows/: build-pdf.yml
Docs/: README_FONTS.md  Tufte_Layout_and_Citations.md
buildfiles/: apply_fonts.py  berg.theme  fix_listing_captions.py  font_config.env  preamble.tex.template
finmodel/: BASF_USAGE.md  EXAMPLE.py  MULTICOLUMN_USAGE.md  OUTPUT_EXAMPLE.md  QUICK_REFERENCE.md  README.md  STYLES_REFERENCE.md  USAGE.md  __init__.py  config.py  formatter.py  plotext_wrapper.py  reader.py  styles.py
